fixed issue when sidebar is visible even when collapsed

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -99,38 +99,3 @@
 .link:hover {
   border-bottom: 2px solid var(--color-brown-dark);
 }
-
-
-
-
-
-
-/*
-.link:hover {
-  color: greenyellow !important;
-}
-
-.header__item {
-  color: orangered !important;
-}
-.header__item--active {
-  color: greenyellow !important;
-}
-*/
-
-/*
-.header__navbar * {
-  line-height: 0;
-  padding: .5rem 0rem .5rem 0rem;
-  text-decoration: none;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-  color: white !important;
-  font-size: 1.3rem;
-
-  &:hover {
-    text-shadow: 0 1px 0 white;
-    //color: #212121;
-    outline: none;
-  }
-}
-*/
